--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clerk": "^0.8.3",
     "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "next": "14.2.13",
